--- a/bakalarka-text.tex
+++ b/bakalarka-text.tex
@@ -99,6 +99,46 @@
 %% TOC (required)
 \tableofcontents
 
+%% Thesis text structured using
+%% chapters, sections, subsections, etc.
+\chapter{Úvod} 
+\section{Cíle práce}
+\section{Struktura práce}
+
+\chapter{Rapid Application Development}
+\section{Rozdíly oproti jiným agilním metodám}
+\section{Fáze vývoje pomocí RAD}
+\section{Výhody}
+\section{Nevýhody}
+\section{Přehled nástrojů}
+
+\section{Spring Roo}
+\subsection{Rozšíření}
+
+\section{JBoss Forge}
+\subsection{Rozšíření}
+
+\section{Rozdíly}
+
+\chapter{Testování UI webových aplikací}
+
+\section{Selenium}	
+\subsection{Selenium Remote Control}
+\subsection{Selenium Grid}
+\subsection{Selenium WebDriver}
+
+\section{Arquillian Drone}	
+
+\section{Arquillian Graphene 2}
+
+\chapter{Vlastní tvorba pluginů}
+\section{Plugin pro JBoss Forge}
+\subsection{Použité nástroje}
+
+\section{Addon pro Spring Roo}
+\subsection{Použité nástroje}
+
+\chapter{Závěr}
 
 %% Lists of tables and figures, glossary, etc.
 \printindex
